Thu Jul  9 06:44:32 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/Monitor_Control/Bytes_Received_Monitor.h:
        * ace/Monitor_Control/Bytes_Sent_Monitor.h:
        * ace/Monitor_Control/Bytes_Sent_Monitor.cpp:
        * ace/Monitor_Control/Packets_Received_Monitor.h:
        * ace/Monitor_Control/Packets_Received_Monitor.cpp:
        * ace/Monitor_Control/Packets_Sent_Monitor.h:
          Fixed compile errors on FreeBSD.

Wed Jul  8 14:22:41 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Monitor_Control/Makefile.am:

          Added new files FreeBSD_Network_Interface_Monitor.{h,cpp}
          to the makefile.

Tue Jul  7 22:21:03 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Monitor_Control/FreeBSD_Network_Interface_Monitor.cpp:
        * ace/Monitor_Control/FreeBSD_Network_Interface_Monitor.h:

          New files, defining a monitor for FreeBSD.

        * ace/Monitor_Control/Bytes_Received_Monitor.cpp:
        * ace/Monitor_Control/BSD_Network_Interface_Monitor.h:
        * ace/Monitor_Control/Monitor_Control.mpc:
        * ace/Monitor_Control/Bytes_Sent_Monitor.h:
        * ace/Monitor_Control/Packets_Sent_Monitor.h:
        * ace/Monitor_Control/Bytes_Received_Monitor.h:
        * ace/Monitor_Control/BSD_Network_Interface_Monitor.cpp:
        * ace/Monitor_Control/Packets_Received_Monitor.h:
        * ace/Monitor_Control/Packets_Sent_Monitor.cpp:

          New files added to MPC project and existing monitors
          patched with NetBSD/OpenBSD-related changes. Thanks to
          Boyan Kasarov <bkasarov at gmail dot com> for submitting
          these changes.

Tue Jul  7 12:57:30 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/FoxReactor/FoxReactor.cpp:
          Added missing return statement to avoid gcc's
          'no return statement in function returning non-void' warning.

Tue Jul  7 06:00:39 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-freebsd.h: